<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/current_temp"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="48dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintBottom_toBottomOf="@id/current_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <TextView
        android:id="@+id/current_feel"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:text="@string/current_feel"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/current_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_low"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_feel" />

    <TextView
        android:id="@+id/current_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_high"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_low" />

    <TextView
        android:id="@+id/current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_high" />

    <TextView
        android:id="@+id/current_pressure"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:text="@string/current_pressure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_humidity" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:layout_marginBottom="330dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>